# SHEPHERD-Advanced

./: .gitattributes  .gitignore  .workspace_restructure_blueprint.md  Makefile  README_DEPLOY_CMD.md  deploy.cmd  deploy.sh  deployment-guide.md  from claude.md  launch_shepherd.cmd  launch_shepherd.sh  medical-kg-blueprint.md  medical-kg-todo.md  pyproject.toml  requirements.txt  requirements_arm.txt  requirements_windows.txt  run_deploy.sh  tech-audit-report.md
configs/: accelerators.json  deployment.yaml  platform.yaml
configs/deployment/: README.md  linux_arm_dgx.yaml  linux_x86.yaml  windows.yaml
configs/schemas/: deployment.schema.json
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW_2026-02-25.md  CONFIG_AUTHORITY.md  DIRECTORY_STRUCTURE.md  ENGINEERING_PROGRESS_REPORT_2026-02.md  GNN_ARCHITECTURE_NOTES.md  HANDOFF_SESSION_2026-02-21.md  HANDOFF_SESSION_2026-02-23.md  MILESTONE_REPORT.md  MODULE_SCAN_REPORT_2026-01-26.md  PROGRESS_2026-01-20.md  SESSION_HANDOFF.md  TODO_Advanced_Features.md  TORCH_COMPILE_EXPERIMENT_FINDINGS.md  TRAINING_MODULE_AUDIT_2026-01-25.md  TRAINING_PIPELINE_PLAYBOOK.md  data_structure_and_validation_v3.md  implementation_plan_v1.md  module_dependencies.md
docs/Repair/: REPAIR_CHECKLIST.md  SCAN_REPORT.md
models/pretrained/: README.md
scripts/: README_WINDOWS_CMD.md  benchmark_attention.py  build_index.py  build_knowledge_graph.py  build_pyg_arm.sh  compute_shortest_paths.py  debug_voyager_windows.py  download_data.py  evaluate_model.py  generate_config.py  install_pytorch_pyg.py  migrate_checkpoints.py  post_install_verify.py  preprocess_data.py  profile_training.py  run_local_tests.py  setup_demo.py  setup_env.sh  test_gnn_inference.py  train_model.py  validate_installation.py  validate_pyg_ext.py
scripts/launch/: shep_launch.py
scripts/service/systemd/: shepherd-indexer.service  shepherd.service
scripts/spikes/: native_sampler_feasibility.py  validate_fast_subgraph.py
src/: runtime_presets.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  diagnose.py  disease.py  pipeline.py  search.py  system.py  training.py
src/api/services/: __init__.py  backend_control.py  training_manager.py
src/config/: __init__.py  config_validator.py  hyperparameters.py  model_types.py  runtime_presets.py  schema_loader.py  training_fields.py
src/core/: __init__.py  protocols.py  schema.py  types.py
src/data_sources/: __init__.py  hpo_annotations.py  ortholog.py  pubmed.py
src/inference/: __init__.py  input_validator.py  pipeline.py
src/kg/: __init__.py  builder.py  data_loader.py  entity_linker.py  graph.py  hypergraph.py  preprocessing.py  sample_generator.py
src/models/: __init__.py  encoders.py  gnn.py  heads.py  layers.py
src/models/attention/: __init__.py  adaptive_backend.py  flex_attention.py
src/models/decoders/: __init__.py  heads.py
src/models/encoders/: __init__.py  feature_encoder.py  position_encoder.py  type_encoder.py
src/models/gnn/: __init__.py  layers.py  shepherd_gnn.py
src/ontology/: __init__.py  base.py  constraints.py  hierarchy.py  loader.py
src/reasoning/: __init__.py  evidence_panel.py  explanation_generator.py  path_reasoning.py
src/retrieval/: __init__.py  vector_index.py
src/retrieval/backends/: __init__.py  base.py  cuvs_backend.py  voyager_backend.py
src/training/: __init__.py  callbacks.py  loss_functions.py  trainer.py
src/utils/: checkpoint_paths.py  fingerprint.py  metrics.py  pyg_native_check.py
src/webui/: __init__.py  app.py
src/webui/components/: __init__.py  diagnosis_panel.py  runtime_settings.py  training_console.py
tests/benchmarks/platform_specific/: test_vector_index_arm.py  test_vector_index_x86.py
tests/fixtures/: mini_hpo.obo
tests/integration/: test_pipeline.py  test_retrieval_integration.py
tests/unit/: test_backend_control.py  test_checkpoint_paths.py  test_data_pipeline.py  test_diagnosis_panel.py  test_inference.py  test_kg.py  test_models.py  test_ontology.py  test_pipeline_arch_resolve.py  test_pipeline_conv_detect.py  test_pyg_native_check.py  test_reasoning.py  test_retrieval.py  test_runtime_presets.py  test_scheduler_min_lr_guard.py  test_training_api.py  test_training_console_config.py  test_training_console_resume.py  test_training_fields.py  test_webui.py
