[project]
name = "shepherd-advanced"
version = "0.2.0"
description = "Medical Knowledge Graph diagnostic engine with dual-platform support (Windows x86 + DGX Spark ARM)"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}

# Core dependencies
#
# Dependency management policy (Phase C onwards):
#   - PyTorch (torch/torchvision/torchaudio) is listed here and routed to the
#     CUDA 13.0 wheel index via [tool.uv.sources] + [[tool.uv.index]] below.
#     uv resolves wheels per-platform (linux_x86_64, linux_aarch64, win_amd64)
#     and records them in uv.lock for cross-platform reproducible installs.
#   - PyG native extensions (pyg-lib, torch-scatter, torch-sparse, torch-cluster)
#     are NOT listed here. They come from a flat HTML wheel index
#     (https://data.pyg.org/whl/torch-2.10.0+cu130.html) whose URL is
#     torch-version-coupled, and three of them have no Windows wheels.
#     deploy.sh / deploy.cmd install them post-sync with graceful skip on
#     missing wheels (fallback to torch.scatter_reduce is built into PyG).
#   - Optional acceleration packages (flash-attn, xformers, sage-attn) remain
#     opt-in via launch_shepherd.{sh,cmd} flags; not managed by uv.
dependencies = [
    # PyTorch stack (CUDA 13.0; routed via [tool.uv.sources] below)
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",

    # Ontology processing
    "pronto>=2.7",
    "networkx>=3.2",

    # Data processing & scientific computing
    "pandas>=2.2",
    "numpy>=2.0",  # Python 3.12 supports NumPy 2.3+
    "scipy>=1.14",

    # Configuration & serialization
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "toml>=0.10",

    # Data validation & schemas
    "pydantic>=2.7",
    "pydantic-settings>=2.2",

    # API framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "gradio>=5.20,<5.30",

    # Vector retrieval (cross-platform CPU backend)
    "voyager>=2.0",  # Spotify's HNSW library, replaces hnswlib

    # System monitoring
    "psutil>=5.9",

    # Utilities
    "packaging>=23.0",
    "tqdm>=4.66",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pre-commit>=3.7",
    "ruff>=0.5",
    "black>=24.8",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-asyncio>=0.23",
    "pipdeptree>=2.23",  # diagnostic — see conflicts in installed env (uv pip check is the install-time counterpart)
]

# NLP modules (optional)
nlp = [
    "transformers>=4.40",
    "tokenizers>=0.19",
    "sentence-transformers>=3.0",
    "spacy>=3.7",
]

# Medical standards (optional)
medical = [
    "fhir.resources>=7.1",
    "hl7>=0.4.5",  # PyPI canonical name is "hl7"; GitHub repo is "python-hl7" (same maintainer, different name)
]

# Benchmarking tools
benchmark = [
    "torch-tb-profiler>=0.4",
    "memory-profiler>=0.61",
    "py-spy>=0.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/shepherd-advanced"
Repository = "https://github.com/yourusername/shepherd-advanced"
Documentation = "https://shepherd-advanced.readthedocs.io"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================
# uv Configuration (Phase C: uv-managed deployment)
# ============================================

[tool.uv]
# Platforms this project targets. uv produces a universal lockfile by default;
# listing environments here narrows resolution to only these platforms, which
# keeps uv.lock smaller and makes "wheel missing for platform X" failures
# surface during `uv lock` instead of at deploy time on an end-user machine.
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

# Route the PyTorch stack to the CUDA 13.0 wheel index. Without this, uv would
# pull torch from default PyPI (CPU-only wheels).
[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]

# explicit = true means this index is consulted ONLY for packages explicitly
# mapped to it via [tool.uv.sources] above. All other packages continue to
# resolve from default PyPI. This prevents the PyTorch index from accidentally
# satisfying transitive deps with a CUDA-tagged wheel.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

# ============================================
# Tool Configurations
# ============================================

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["N802", "N803"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pronto.*", "voyager.*", "cuvs.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers", "--tb=short", "--cov=src"]
markers = [
    "slow: slow tests",
    "x86_64: x86 platform only",
    "arm64: ARM platform only",
    "cuda: requires CUDA",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
